# winbang

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  dispatch.rs  gui.rs  install.rs  logging.rs  main.rs  platform.rs  registry.rs  script.rs  verb.rs
test_files/: hello-rb  hello-sh  hello-ts  hello.rb  hello.ts  test-jl  test-py  test-rb  test-sh  test-ts  test.rb  test.ts  unknown
