[package]
name = "winbang"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
which = "8.0"
windows = { version = "0.62", features = [
    "Win32",
    "Win32_UI",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_System",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
] }
shell-words = "1.1"
